Custom Component/src/objects/Reference_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>APIName__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceRecordType__c</fullName>
        <label>Reference Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Reference_Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>APIName__c</columns>
        <columns>ObjectName__c</columns>
        <columns>ReferenceRecordType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RM-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>